Fix #5227: section editing, fluid spacing

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -67,6 +67,10 @@ div.orbeon.orbeon-portlet-div {
             margin-bottom: 0;
             min-width: 740px;                                               // To allow for fluidity but not "too small" (was 980px)
             min-height: 100%;                                               // So the main area uses all the available space, not revealing a large portion of the background
+
+            .container-fluid {
+                padding: 0 40px;                                            // Additional padding on the sides, to leave space for icons
+            }
         }
     }
 
